<resources>
    <string name="app_name">CozyNotes</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_notebooks">Notebook</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- Demo -->

    <!-- Menu -->
    <string name="menu_undo">Undo</string>
    <string name="menu_redo">Redo</string>
    <string name="menu_github">GitHub</string>

    <!-- Dialog -->
    <string name="dialog_title">Insert link</string>
    <string name="dialog_edit_hint">http(s)://</string>
    <string name="dialog_button_ok">OK</string>
    <string name="dialog_button_cancel">Cancel</string>

    <!-- Toast -->
    <string name="toast_bold">Bold</string>
    <string name="toast_italic">Italic</string>
    <string name="toast_underline">Underline</string>
    <string name="toast_strikethrough">Strikethrough</string>
    <string name="toast_bullet">Bullet</string>
    <string name="toast_quote">Quote</string>
    <string name="toast_insert_link">Insert link</string>
    <string name="toast_format_clear">Format clear</string>
    <string name="knife_placeholder">Write note text here</string>
    <string name="note_create_title_placeholder">Title of the note</string>
    <string name="notebook_label">notebook</string>
    <string name="note_label">note</string>
    <string name="empty_list_recent">No recent item</string>
    <string name="menu_title_refresh">Refresh</string>


    <string-array name="notebook_test_array">
        <item>Notebook 1</item>
        <item>Notebook 2</item>
        <item>Notebook 3</item>
        <item>Create a Notebook ....</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="auth_label" translatable="false">CozyNotes</string>
    <string name="no_connection">No connection detected</string>
    <string name="splashcreen_logo_description">Logo cozycloud</string>
    <string name="list_notrebook_name">Nom du Notebook</string>
    <string name="list_notebook_desc">Description du notebook</string>
    <string name="nav_camera">Import</string>
    <string name="nav_gallery">Gallery</string>
    <string name="nav_slideshow">Slideshow</string>
    <string name="nav_manage">Tools</string>
    <string name="nav_communicate">Communicate</string>
    <string name="nav_share">Share</string>
    <string name="nav_send">Send</string>
    <string name="notebook_title">Notebook title</string>
    <string name="action_settings_test">TestActivity</string>
    <string name="title">Title</string>
    <string name="cozynotes">CozyNotes</string>
    <string name="date">Date</string>
    <string name="card_note_text">test</string>
    <string name="input_url">URL (https://)</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="disconnect">Disconnect</string>
    <string name="all_notrebooks">See all notebooks</string>
    <string name="all_notes">See all notes</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="request_instance">Request an instance : http://cozy.io</string>
    <string name="error_database_load">Database Loading Error, expect errors during the execution of the app</string>
    <string name="title_activity_receive">ReceiveActivity</string>
    <string name="title_activity_share">ShareActivity</string>
    <string name="R.main.appbar.title">Recent Notes</string>
    <string name="alertdialog_delete_note_message">Are you sure you want to delete this note ?</string>
    <string name="alertdialog_delete_note_title">Delete a note</string>
    <string name="alertdialog_delete_action">Delete</string>
    <string name="alertdialog_cancel_action">Cancel</string>
    <string name="alertdialog_delete_notebook_message">You are going to remove a notebook and all the notes associated. Continue ?</string>
    <string name="alertdialog_delete_notebook_title">Delete notebook</string>
    <string name="error_signoff">Error during Sign off</string>
    <string name="notebook">Notebook</string>
    <string name="notebook_name">Notebook name</string>
    <string name="detail_content">Content of the note</string>
    <string name="note_placeholder"><![CDATA[<p> write text here</p>]]></string>
    <string name="create_notebook">Create a Notebook …</string>
    <string name="empty_input_title">Title can\'t be empty</string>
    <string name="empty_input_content">Content can\'t be empty</string>
    <string name="add">Add</string>
    <string name="update_asked">Update asked</string>
    <string name="get_from_cloud">Get from cloud</string>
</resources>
