<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/all_notes"
            android:icon="@drawable/ic_action_note_add_blue"
            android:title="@string/all_notes" />
        <item
            android:id="@+id/all_notebooks"
            android:icon="@drawable/ic_action_book_blue"
            android:title="@string/all_notrebooks" />
        <item
            android:id="@+id/get_from_cloud"
            android:icon="@drawable/ic_action_book_blue"
            android:title="@string/get_from_cloud" />
    </group>
    <group android:checkableBehavior="none">
        <item
            android:id="@+id/import_from_cloud"
            android:icon="@drawable/ic_file_cloud_download_blue"
            android:title="@string/get_from_cloud"/>
        <item
            android:id="@+id/export_from_cloud"
            android:icon="@drawable/ic_file_cloud_upload_blue"
            android:title="@string/save_to_cloud"/>
        <item
            android:id="@+id/disconnect"
            android:icon="@drawable/ic_action_settings_power_blue"
            android:title="@string/disconnect" />
    </group>
</menu>
