<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    card_view:cardCornerRadius="4dp"
    android:layout_margin="5dp"
   >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/card_note_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textSize="24sp"
            android:paddingTop="24dp"
            android:paddingRight="16dp"
            android:paddingLeft="16dp"
            android:textStyle="bold"
            android:textColor="@color/black" />
        <TextView
            android:id="@+id/card_note_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/card_note_title"
            android:paddingTop="12dp"
            android:paddingRight="16dp"
            android:paddingLeft="16dp"
            android:text="@string/date"
            android:textSize="16dp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/card_note_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:textSize="14sp"
            android:layout_below="@id/card_note_date"
            android:text="@string/card_note_text"/>
        <!--<View
            android:id="@+id/separator"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:paddingTop="5dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_below="@id/card_note_text"/>-->
        <Button
            android:id="@+id/card_note_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/card_note_text"
            android:padding="8dp"
            android:text="@string/edit"/>
        <Button
            android:id="@+id/card_note_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:layout_below="@id/card_note_text"
            android:layout_toEndOf="@id/card_note_edit"
            android:text="@string/delete"/>

    </RelativeLayout>



</android.support.v7.widget.CardView>