<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/blue_500"
    android:fitsSystemWindows="true"
    >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="35dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:weightSum="1">

        <ImageView
            android:id="@+id/logo_login"
            android:layout_width="113dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"

            android:src="@drawable/ic_logo_cozycloud_white"
            android:contentDescription="@string/splashcreen_logo_description"
            android:layout_weight="0.31" />

        <TextView android:src="@drawable/logo"
            android:layout_width="wrap_content"
            android:layout_height="72dp"
            android:layout_marginBottom="15dp"
            android:paddingTop="10dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/cozynotes"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:textSize="40dp"
            android:textIsSelectable="true" />


        <!--  URL Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:textColorHint="@color/white"
            android:theme="@style/AppTheme">
            <EditText android:id="@+id/input_url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textUri"
                android:hint="@string/input_url"
                android:textColorHint="@color/white"
                android:textColor="@color/white"/>
        </android.support.design.widget.TextInputLayout>
        <!--  Password Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:textColorHint="@color/white"
            android:theme="@style/AppTheme">
            <EditText android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:textColorHint="@color/white"
                android:textColor="@color/white"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:padding="12dp"
            android:text="@string/login"
            android:textColor="@color/colorPrimaryDark"
            android:background="#ffffff" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:padding="10dp"
            android:text="@string/request_instance"
            android:linksClickable="true"
            android:autoLink="web"
            android:textColor="#ffffff"
            android:textColorLink="#c5c2c2" />

    </LinearLayout>
</ScrollView>