<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="cpe.lesbarbus.cozynotes.NoteDetailDialog">
    <android.support.design.widget.AppBarLayout
        android:id="@+id/note_detail_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/note_detail_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/blue_500"
            app:popupTheme="@style/AppTheme.PopupOverlay" >

            <ImageButton
                android:id="@+id/note_detail_backbutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_navigation_arrow_back"
                android:background="#00ffffff"
                android:contentDescription="@null" />

            <ImageButton
                android:id="@+id/note_detail_editbutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_gravity="end"
                android:layout_alignParentRight="true"
                android:scaleType="center"
                android:src="@drawable/ic_editor_mode_edit_white"
                android:background="#00ffffff"
                android:contentDescription="@null" />
            <ImageButton
                android:id="@+id/note_detail_deletebutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_gravity="end"
                android:layout_alignParentRight="true"
                android:scaleType="center"
                android:src="@drawable/ic_action_delete_white"
                android:contentDescription="@null"
                android:background="#00ffffff" />
            <ImageButton
                android:id="@+id/note_detail_sharebutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_gravity="end"
                android:layout_alignParentRight="true"
                android:scaleType="center"
                android:src="@drawable/ic_social_share_white"
                android:background="#00ffffff"
                android:contentDescription="@null" />
            <ImageButton
                android:id="@+id/note_detail_remindbutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_gravity="end"
                android:layout_alignParentRight="true"
                android:scaleType="center"
                android:src="@drawable/ic_alarm_white_24dp"
                android:background="#00ffffff"
                android:contentDescription="@null" />

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>
    <TextView
        android:id="@+id/note_detail_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="?attr/actionBarSize"
        android:paddingTop="10dp"
        android:hint="@string/note_create_title_placeholder"
        android:inputType="text"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:textColor="@color/black"
        android:textSize="24sp" />

    <View
        android:id="@+id/note_detail_divider"
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="2dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="2dp"
        android:background="@color/blue_500"
        android:minHeight="2px"
        android:layout_below="@id/note_detail_title"/>

    <TextView
        android:id="@+id/note_detail_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/detail_content"
        android:paddingTop="12dp"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_below="@+id/note_detail_divider"
        />
    <TextView
        android:id="@+id/note_detail_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:textAlignment="textEnd"
        android:layout_below="@id/note_detail_content"
        android:hint="@string/date"/>

</RelativeLayout>
